# decimal

./: .gitignore  autogen.sh  configure.ac
src/: DecimalContext.c  DecimalContext.h  Makefile.am  dec128.c  dec128.h  decimal.c  decimal.h  decimalInt.h  declet.c  dpd.c
test/: Makefile.am  test_dec128.c  test_decimal.c  test_decimalInt.c  test_declet.c
